...
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/select_ruleset"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half" />
            <Spinner
                android:id="@+id/ruleset_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
...
                android:layout_column="1"
                android:paddingStart="@dimen/spinner_padding"
                android:paddingLeft="@dimen/spinner_padding"
                android:paddingEnd="@dimen/spinner_padding"
                android:paddingRight="@dimen/spinner_padding">
                <EditText
                    android:id="@+id/game_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/min"/>
                <TextView
                    android:id="@+id/game_semicolon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semicolon"/>
                <EditText
                    android:id="@+id/game_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/no_time"/>
            </LinearLayout>
...
                android:layout_column="1"
                android:paddingStart="@dimen/spinner_padding"
                android:paddingLeft="@dimen/spinner_padding"
                android:paddingEnd="@dimen/spinner_padding"
                android:paddingRight="@dimen/spinner_padding">
                <EditText
                    android:id="@+id/card_minutes"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_time"/>
                <TextView
                    android:id="@+id/card_semicolon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semicolon"/>
                <EditText
                    android:id="@+id/card_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/default_secs"/>
            </LinearLayout>
...
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <TextView
                android:id="@+id/card_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_count"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half"/>
            <EditText
                android:id="@+id/card_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/allow_multiple_winners_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/allow_multiple_winners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/allow_multiple_winners"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>
...
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/double_edge_questions_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/include_double_edge_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/double_edge_sword_questions"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>
...
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/final_wager_question_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/include_final_wager_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/wager_final_question"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>
...
        </LinearLayout>

    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_play_button_24dp"
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
...
