<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:padding="10dp"
    android:id="@+id/edit_card_top_level">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_column="0"
            android:text="@string/type"
            android:padding="3dip"
            android:gravity="end"
            android:layout_width="wrap_content"
            />
        <Spinner
            android:id="@+id/edit_card_card_type_spinner"
            android:layout_column="1"
            android:gravity="center"
            android:padding="@dimen/spinner_padding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <TextView
            android:layout_column="0"
            android:text="@string/points"
            android:padding="@dimen/md_text_view_padding"
            android:gravity="end"
            android:layout_width="wrap_content" />
        <EditText
            android:id="@+id/edit_card_points_value"
            android:layout_column="1"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="8" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_column="0"
            android:text="@string/question"
            android:padding="@dimen/md_text_view_padding"
            android:gravity="end"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/edit_card_question_value"
            android:layout_column="1"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/answer_row_1">
        <TextView
            android:layout_column="0"
            android:text="@string/answer"
            android:padding="@dimen/md_text_view_padding"
            android:gravity="end"
            android:layout_width="wrap_content" />
        <EditText
            android:id="@+id/edit_card_answer_field_1"
            android:layout_column="1"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/answer_row_2_1">
        <TextView
            android:layout_column="0"
            android:text="@string/wrong_answer"
            android:padding="@dimen/md_text_view_padding"
            android:gravity="end"
            android:layout_width="wrap_content" />
        <EditText
            android:id="@+id/edit_card_answer_field_2"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/answer_row_2_2">
        <EditText
            android:id="@+id/edit_card_answer_field_3"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/answer_row_2_3">
        <EditText
            android:id="@+id/edit_card_answer_field_4"
            android:gravity="start"
            android:padding="@dimen/md_text_view_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/answer_row_3">
        <TextView
            android:layout_column="0"
            android:padding="@dimen/md_text_view_padding"
            android:gravity="end"
            android:layout_width="wrap_content" />
        <RadioGroup
            android:id="@+id/edit_card_true_or_false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/edit_card_true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/radio_button_padding"
                android:paddingLeft="0dp"
                android:text="@string/capital_true"
                android:layout_weight="1"
                />
            <RadioButton
                android:id="@+id/edit_card_false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/radio_button_padding"
                android:paddingLeft="0dp"
                android:text="@string/capital_false"
                android:layout_weight="1"
                />
        </RadioGroup>
    </TableRow>

</TableLayout>
