...
                android:layout_weight="2"
                android:spinnerMode="dropdown"
                android:entries="@array/card_sort_list"/>

        </LinearLayout>
        <ListView
            android:id="@+id/list_of_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/array_adapter_padding"
            android:paddingBottom="@dimen/listview_bottom_padding"
            android:clipToPadding="false"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_plus_btn_white_24dp"
        android:id="@+id/new_card_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
...
